# DocumentResearchPro

./: .replit  README.md  app.py  app_streamlit.py  browser_controller.py  browser_controller_new.py  content_analyzer.py  debug_interface.py  deepseek_integration.py  executor.py  gemini_integration.py  generator.py  main.py  model_adapter.py  models.py  orchestration.py  orchestrator.py  planner.py  pyproject.toml  requirements.txt  research_system.py  run_streamlit.py  streamlit_main.py  streamlit_workflow.sh  utils.py  validator.py  validators.py
attached_assets/: Pasted--sorgente-guglielmov-c11-bw6klylr2q2-DocumentResearchPro-streamlit-run-app-streamlit-py-server-1745330919607.txt  Pasted-Documento-di-Progetto-Sistema-AI-per-Ricerca-Sintesi-e-Generazione-Documentale-1-Obiettivo-del-P-1745320359627.txt  Pasted-NameError-NameError-name-GEMINI-API-KEY-is-not-defined-Traceback-most-recent-call-last-Fil-1745333052359.txt  Pasted-WARNING-root-Using-deprecated-ChatOllama-from-langchain-community-Please-install-langchain-ollama--1745330419373.txt  Pasted-sorgente-guglielmov-c11-bw6klylr2q2-DocumentResearchPro-python-app-streamlit-py-WARNING-root-Us-1745330330150.txt  Pasted-streamlit-run-app-streamlit-py-server-address-0-0-0-0-server-port-8501-You-can-now-view-you-1745330702645.txt
research_results/: 20250422_105059_cc2981c8-7246-42eb-af38-0f3d6ec22cf2.json  20250422_105144_69191264-d5fb-4b83-b790-b55c2e21f178.json
static/css/: styles.css
static/js/: main.js
templates/: 404.html  index.html  results.html
tests/: test_browser_controller.py  test_content_analyzer.py  test_planner.py
