[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "google-generativeai>=0.8.5",
    "gunicorn>=23.0.0",
    "langchain>=0.3.23",
    "ollama>=0.4.8",
    "playwright>=1.51.0",
    "prefect>=3.3.5",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
]
