[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-ai-generativelanguage>=0.6.15",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-ollama>=0.3.2",
    "playwright>=1.51.0",
    "prefect>=3.3.5",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
]
